===================
- App has now a debug attribute, set when it is initialized with debug=True.

- Removed 3 configuration keys, which are now available as properties of the
  WSGI app instance:
  - dev: True is the app is using the dev server, False otherwise.
  - app_id: the application ID as defined in *app.yaml*.
  - version_id: the deployed version ID. Always '1' when using the dev server.


Version 0.6.2 - August 20, 2010
===============================
- Added Tipfy.run(): run_wsgi_app(app) is now deprecated and calls app.run().


Version 0.6.1 - August 19, 2010
===============================
- RequestHandler instances are now callables. __call__() is used instead of
  dispatch(), which is now deprecated and just calls the instance.

- Added RequestHandler methods:
  - abort(), a wrapper for abort().
  - get_config(), a wrapper for Config.get_or_load().
  - handle_exception()
  - redirect().
  - redirect_to(): redirect() + url_for()
  - url_for():

- Added get_valid_methods(), which returns the HTTP methods a handler can
  handle. This is used when raising MethodNotAllowed, which now correctly
  lists the allowed methods as required by HTTP 1.1 spec.

- Added HandlerPrefix, a rule factory to prefix handler definition in rules.
  For example, take these rules::

      rules = [
          HandlerPrefix('my_app.handlers.', [
              Rule('/', endpoint='index', handler='IndexHandler'),
              Rule('/entry/<entry_slug>', endpoint='show', handler='ShowHandler'),
          ]),
      ]

  These are the same as::

      rules = [
          Rule('/', endpoint='index', handler='my_app.handlers.IndexHandler'),
          Rule('/entry/<entry_slug>', endpoint='show', handler='my_app.handlers.ShowHandler'),
      ]

- If the requested method is not in ALLOWED_METHODS, a NotImplemented exception
  ("501 Not Implemented") is raised, instead of MethodNotAllowed ("405 Method
  Not Allowed").

- ALLOWED_METHODS are now listed in upper case.
